--- a/dashboard.html
+++ b/dashboard.html
@@ -357,6 +357,10 @@
 </head>
 
 <body>
+    <div class="logo-container">
+        <img src="favicon.png" alt="RW TIPS Logo" class="logo">
+        <div class="logo-text">RW TIPS</div>
+    </div>
     <div class="dashboard-container">
         <aside class="sidebar">
             <h2>RW TIPS</h2>
@@ -438,324 +442,89 @@
         </main>
     </div>
 
-    <div class="logo-container">
-        <img src="favicon.png" alt="RW TIPS Logo" class="logo">
-        <div class="logo-text">RW TIPS</div>
-    </div>
-
     <style>
-    .logo-container {
-        text-align: center;
-        margin: 20px 0;
-        padding: 20px;
-        position: relative;
-    }
+        .logo-container {
+            text-align: center;
+            padding: 20px;
+            margin-bottom: 30px;
+            background: rgba(0, 255, 136, 0.05);
+            border-radius: 15px;
+            border: 1px solid rgba(0, 255, 136, 0.1);
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.1);
+        }
 
-    .logo {
-        width: 120px;
-        height: auto;
-        margin-bottom: 15px;
-        filter: drop-shadow(0 0 10px rgba(0, 255, 136, 0.5));
-        transition: all 0.3s ease;
-    }
+        .logo {
+            width: 80px;
+            height: auto;
+            margin-bottom: 10px;
+            filter: drop-shadow(0 0 10px rgba(0, 255, 136, 0.5));
+            transition: all 0.3s ease;
+        }
 
-    .logo:hover {
-        transform: scale(1.05);
-        filter: drop-shadow(0 0 15px rgba(0, 255, 136, 0.7));
-    }
+        .logo:hover {
+            transform: scale(1.1);
+            filter: drop-shadow(0 0 15px rgba(0, 255, 136, 0.7));
+        }
 
-    .logo-text {
-        font-size: 1.8rem;
-        background: linear-gradient(45deg, #00ff88, #00ffaa);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        font-weight: 700;
-        letter-spacing: 2px;
-        margin-top: 10px;
-        text-shadow: 0 0 10px rgba(0, 255, 136, 0.5),
-            0 0 20px rgba(0, 255, 136, 0.3),
-            0 0 30px rgba(0, 255, 136, 0.2);
-        animation: neonPulse 1.5s ease-in-out infinite alternate;
-    }
+        .logo-text {
+            font-size: 1.5rem;
+            font-weight: 700;
+            background: linear-gradient(45deg, #00ff88, #00ffaa);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .shortcut-indicator {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: rgba(0, 255, 136, 0.1);
+            padding: 10px 15px;
+            border-radius: 8px;
+            border: 1px solid rgba(0, 255, 136, 0.2);
+            color: var(--neon-green);
+            font-size: 0.9rem;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.3s ease;
+        }
+
+        .shortcut-indicator.active {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 
     <script>
-        let currentPage = 1;
-        let eventsData = [];
-        let playerStats = {};
-        let chartInstance = null;
+        document.addEventListener('DOMContentLoaded', function () {
+            const shortcuts = {
+                'h': 'h2h_analysis.html',
+                'l': 'live.html',
+                'p': 'players.html',
+                'r': 'results.html',
+                's': 'statistics.html',
+                'v': 'visualization.html'
+            };
 
-        // Buscar eventos de uma página específica
-        async function fetchEvents(page) {
-            try {
-                const response = await fetch(`https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=${page}`);
-                const data = await response.json();
-                return data.data;
-            } catch (error) {
-                console.error(`Erro ao buscar página ${page}:`, error);
-                return [];
-            }
-        }
+            const indicator = document.createElement('div');
+            indicator.className = 'shortcut-indicator';
+            document.body.appendChild(indicator);
 
-        // Processar estatísticas dos jogadores
-        function processPlayerStats(events, gamesLimit) {
-            const stats = {};
-            events.forEach(event => {
-                const [homeGoals, awayGoals] = event.score.split('-').map(Number);
-                const homePlayer = event.home.match(/\((.*?)\)/)?.[1] || event.home;
-                const awayPlayer = event.away.match(/\((.*?)\)/)?.[1] || event.away;
+            document.addEventListener('keydown', function (e) {
+                if (e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA') return;
 
-                if (!stats[homePlayer]) stats[homePlayer] = { games: [], wins: 0, draws: 0, losses: 0, goalsScored: 0, goalsConceded: 0, leagueID: event.leagueID };
-                if (!stats[awayPlayer]) stats[awayPlayer] = { games: [], wins: 0, draws: 0, losses: 0, goalsScored: 0, goalsConceded: 0, leagueID: event.leagueID };
-
-                const gameData = { ...event, date: new Date(event.timestamp * 1000).toLocaleString() };
-                stats[homePlayer].games.push(gameData);
-                stats[awayPlayer].games.push(gameData);
-
-                stats[homePlayer].goalsScored += homeGoals;
-                stats[homePlayer].goalsConceded += awayGoals;
-                stats[awayPlayer].goalsScored += awayGoals;
-                stats[awayPlayer].goalsConceded += homeGoals;
-
-                if (homeGoals > awayGoals) {
-                    stats[homePlayer].wins++;
-                    stats[awayPlayer].losses++;
-                } else if (homeGoals < awayGoals) {
-                    stats[homePlayer].losses++;
-                    stats[awayPlayer].wins++;
-                } else {
-                    stats[homePlayer].draws++;
-                    stats[awayPlayer].draws++;
+                const key = e.key.toLowerCase();
+                if (shortcuts[key]) {
+                    indicator.textContent = `Shortcut: ${key.toUpperCase()}`;
+                    indicator.classList.add('active');
+                    setTimeout(() => {
+                        indicator.classList.remove('active');
+                    }, 1000);
+                    window.location.href = shortcuts[key];
                 }
             });
-
-            Object.values(stats).forEach(player => {
-                player.games = player.games.slice(0, gamesLimit);
-                player.goalsFT = player.games.reduce((sum, g) => sum + parseInt(g.score.split('-')[0]) + parseInt(g.score.split('-')[1]), 0) / player.games.length || 0;
-            });
-
-            return stats;
-        }
-
-        // Preencher filtro de ligas
-        function populateLeagueFilter(events) {
-            const leagues = [...new Set(events.map(event => `${event.leagueID}|${event.leagueName}`))];
-            const select = document.getElementById('leagueFilter');
-            select.innerHTML = '<option value="all">Todas as Ligas</option>';
-            leagues.forEach(league => {
-                const [id, name] = league.split('|');
-                const option = document.createElement('option');
-                option.value = id;
-                option.textContent = name;
-                select.appendChild(option);
-            });
-        }
-
-        // Renderizar estatísticas rápidas
-        function renderQuickStats(stats) {
-            const container = document.getElementById('quickStats');
-            const totalGames = eventsData.length;
-            const totalGoals = eventsData.reduce((sum, event) => {
-                const [home, away] = event.score.split('-').map(Number);
-                return sum + home + away;
-            }, 0);
-            const avgGoalsFT = totalGoals / totalGames || 0;
-            const avgWins = Object.values(stats).reduce((sum, p) => sum + p.wins, 0) / Object.keys(stats).length || 0;
-
-            container.innerHTML = `
-                <div class="stat-card"><h3>Jogos</h3><div class="stat-value">${totalGames}</div></div>
-                <div class="stat-card"><h3>Média Gols FT</h3><div class="stat-value">${avgGoalsFT.toFixed(2)}</div></div>
-                <div class="stat-card"><h3>Média Vitórias</h3><div class="stat-value">${avgWins.toFixed(1)}</div></div>
-            `;
-        }
-
-        // Renderizar gráfico
-        function renderGoalsChart(events) {
-            const ctx = document.getElementById('goalsDistributionChart').getContext('2d');
-            const totalGames = events.length;
-            const totalGoals = events.reduce((sum, event) => {
-                const [home, away] = event.score.split('-').map(Number);
-                return sum + home + away;
-            }, 0);
-            const avgGoalsFT = totalGoals / totalGames || 0;
-
-            if (chartInstance) chartInstance.destroy();
-
-            chartInstance = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Full Time (FT)'],
-                    datasets: [{
-                        label: 'Média de Gols',
-                        data: [avgGoalsFT],
-                        backgroundColor: 'rgba(139, 92, 246, 0.5)',
-                        borderColor: 'rgba(139, 92, 246, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: { beginAtZero: true, grid: { color: 'rgba(255, 255, 255, 0.1)' }, ticks: { color: 'var(--text-secondary)' } },
-                        x: { grid: { display: false }, ticks: { color: 'var(--text-primary)' } }
-                    },
-                    plugins: {
-                        legend: { labels: { color: 'var(--text-primary)' } },
-                        tooltip: { backgroundColor: 'rgba(0, 0, 0, 0.8)', titleColor: 'var(--text-primary)', bodyColor: 'var(--text-secondary)' }
-                    }
-                }
-            });
-        }
-
-        // Renderizar cards dos jogadores
-        function renderPlayerCards(stats, gamesLimit, leagueFilter, sortBy, showRecommendedOnly = false) {
-            const container = document.getElementById('playersContainer');
-            container.innerHTML = '';
-
-            let filteredPlayers = Object.entries(stats)
-                .filter(([_, stats]) => leagueFilter === 'all' || stats.leagueID === leagueFilter);
-
-            filteredPlayers.sort((a, b) => {
-                if (sortBy === 'goalsFT') return b[1].goalsFT - a[1].goalsFT;
-                if (sortBy === 'wins') return b[1].wins - a[1].wins;
-                if (sortBy === 'goalsScored') return b[1].goalsScored - a[1].goalsScored;
-                return 0;
-            });
-
-            filteredPlayers.forEach(([name, stats]) => {
-                const recommended = stats.goalsFT > 5 && stats.wins / gamesLimit > 0.5;
-                if (showRecommendedOnly && !recommended) return;
-
-                const card = document.createElement('div');
-                card.className = `player-card ${recommended ? 'recommended' : ''}`;
-                card.innerHTML = `
-                    <div class="player-header">
-                        <span class="player-name">${name}</span>
-                    </div>
-                    <div class="player-stats">
-                        <div class="stat-group">
-                            <div class="stat-item">
-                                <span class="stat-label">Média Gols FT:</span>
-                                <span class="stat-item-value ${stats.goalsFT > 5 ? 'high-value' : stats.goalsFT > 3 ? 'medium-value' : 'low-value'}">${stats.goalsFT.toFixed(2)}</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-label">Gols Feitos:</span>
-                                <span class="stat-item-value">${stats.goalsScored}</span>
-                            </div>
-                        </div>
-                        <div class="stat-group">
-                            <div class="stat-item">
-                                <span class="stat-label">Vitórias:</span>
-                                <span class="stat-item-value ${stats.wins / gamesLimit > 0.5 ? 'high-value' : 'medium-value'}">${stats.wins}</span>
-                            </div>
-                            <div class="stat-item">
-                                <span class="stat-label">Emp/Der:</span>
-                                <span class="stat-item-value">${stats.draws}/${stats.losses}</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="player-prediction">
-                        <div class="prediction-title">Recomendações:</div>
-                        <div class="prediction-values">
-                            ${stats.goalsFT > 5 ? '<div class="prediction-chip high">Over 4.5 FT (75%)</div>' : '<div class="prediction-chip">Under 4.5 FT (60%)</div>'}
-                        </div>
-                    </div>
-                `;
-                container.appendChild(card);
-            });
-        }
-
-        // Atualizar dashboard
-        async function updateDashboard(showRecommendedOnly = false) {
-            eventsData = await fetchEvents(currentPage);
-            document.getElementById('pageIndicator').textContent = `Página ${currentPage}`;
-            const gamesLimit = parseInt(document.getElementById('gamesFilter').value);
-            const leagueFilter = document.getElementById('leagueFilter').value;
-            const sortBy = document.getElementById('sortBy').value;
-
-            playerStats = processPlayerStats(eventsData, gamesLimit);
-            populateLeagueFilter(eventsData); // Atualiza as ligas com base na página
-            renderQuickStats(playerStats);
-            renderGoalsChart(eventsData);
-            renderPlayerCards(playerStats, gamesLimit, leagueFilter, sortBy, showRecommendedOnly);
-        }
-
-        // Inicializar
-        async function init() {
-            await updateDashboard();
-
-            // Eventos dos filtros
-            document.getElementById('gamesFilter').addEventListener('change', () => updateDashboard());
-            document.getElementById('leagueFilter').addEventListener('change', () => updateDashboard());
-            document.getElementById('sortBy').addEventListener('change', () => updateDashboard());
-            document.getElementById('refreshData').addEventListener('click', () => updateDashboard());
-
-            // Navegação entre páginas
-            document.getElementById('prevPage').addEventListener('click', () => {
-                if (currentPage > 1) {
-                    currentPage--;
-                    updateDashboard();
-                }
-            });
-            document.getElementById('nextPage').addEventListener('click', () => {
-                currentPage++;
-                updateDashboard();
-            });
-
-            // Atalhos de teclado
-            document.addEventListener('keydown', async (e) => {
-                e.preventDefault();
-                if (e.key.toLowerCase() === 'f5') {
-                    await updateDashboard();
-                } else {
-                    switch (e.key.toLowerCase()) {
-                        case 'g':
-                            document.getElementById('sortBy').value = 'goalsFT';
-                            await updateDashboard();
-                            break;
-                        case 'v':
-                            document.getElementById('sortBy').value = 'wins';
-                            await updateDashboard();
-                            break;
-                        case 'r':
-                            await updateDashboard(true);
-                            break;
-                    }
-                }
-            });
-
-            // Adicionar botão de reset
-            const resetButton = document.createElement('button');
-            resetButton.id = 'resetFilters';
-            resetButton.className = 'refresh-btn';
-            resetButton.textContent = 'Resetar Filtros';
-            resetButton.style.marginLeft = 'auto';
-            document.querySelector('.filters-bar').appendChild(resetButton);
-
-            // Evento do botão de reset
-            resetButton.addEventListener('click', async () => {
-                currentPage = 1;
-                document.getElementById('gamesFilter').value = '10';
-                document.getElementById('leagueFilter').value = 'all';
-                document.getElementById('sortBy').value = 'goalsFT';
-                document.getElementById('pageIndicator').textContent = 'Página 1';
-                await updateDashboard();
-            });
-
-            // Adicionar navegação entre guias
-            document.querySelectorAll('nav a').forEach(link => {
-                link.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    const href = link.getAttribute('href').replace('#', '');
-                    if (href) {
-                        window.location.href = `${href}.html`;
-                    }
-                });
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', init);
+        });
     </script>
 </body>
 
